Bug 1393088 - Port bug 1390209 to mailnews: Remove use of nsIDOMHTMLBodyElement. r=smaug